replaced connected ff with disconnected

--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -12,9 +12,9 @@ And with þat crye Arcite anon up sterte
 And seide Cosyn myn what eyleþ þe  
 That art so pale and dedly on to se  
 Why crydestow who haþ þe don offence  
-ﬀor goddes love tak al in pacience  
+ffor goddes love tak al in pacience  
 Oure p̉soun for it may non oþer be  
-ﬀortune haþ yiue us þis aduersite  
+ffortune haþ yiue us þis aduersite  
 Som wicke aspect or disposiciōn̄  
 Of Saturne by som constellaciōn̄  
 Haþ ȝiuen vs þis al þough we had it sworn  
