--- a/transcriptions/16v.md
+++ b/transcriptions/16v.md
@@ -22,7 +22,7 @@ Nay qd Arcite in ernest by my feye
 God helpe me so me lust ful yuel playe  
 This Palamon gan knet his browes twaye  
 It were to þe quod he no gret honour  
-ﬀor to be fals ne for to be traytour  
+ffor to be fals ne for to be traytour  
 To me þat am þi cosyn and þi broþer  
 y sworn ful deepe and ech of vs til oþer  
 That neuer for to deyen in þe payn  
@@ -41,4 +41,4 @@ Now certes fals Arcite þou schalt not so
 I loued hir ferst and tolde þe my wo  
 As to my counseil and my broþer sworn  
 To forthre me as I haue told biforn  
-ﬀor which þou art y bounden as a knight  
+ffor which þou art y bounden as a knight  
