--- a/transcriptions/17v.md
+++ b/transcriptions/17v.md
@@ -16,7 +16,7 @@ That felawe was vnto duk Theseus
 Syn þilke day þat þai were children lite  
 Was come to Athenes his felawe to visite  
 and for to pleye as he was wont to do  
-ﬀor in þis world he loued noman so  
+ffor in þis world he loued noman so  
 And he loued him als tendurly agayn  
 So wel þei loued as olde bokes sayn  
 That whan þat oon was ded soþly to telle  
@@ -27,7 +27,7 @@ And had him knowe at Thebes þer be yere
 And finally at request and preyere  
 Of Ꝑotheus wiþoute ony Raunsōn̄  
 Duk Theseus him leet out of prisōn̄  
-ﬀrely to gon wher þat him list ouer al  
+ffrely to gon wher þat him list ouer al  
 In such a gise as I ȝou telle schal  
 This was þe forware pleinly for tendite  
 Bitwixe Theseus and him Arcite  
@@ -39,6 +39,6 @@ That with a swerd he scholde leese his heed
 Ther nas non oþer remedie ne reed  
 But takeþ his leeue and homward he him spedde  
 Lat him be war his nekke liþ to wedde  
-How gret a sorwe suﬀreþ now arcite  
+How gret a sorwe suffreþ now arcite  
 The deth he feeleþ þurgh his herte smyte  
 He wepeþ.weyleth.crieþ pitously  
