--- a/transcriptions/18r.md
+++ b/transcriptions/18r.md
@@ -12,19 +12,19 @@ Now is my prison̄ worse þan biforn
 Now is me schape eternaly to dwelle  
 Nought in Purgatori but in helle  
 Allas þat euer I knew Ꝑotheus  
-ﬀor elles hadde I haue dwelled with Theseus  
+ffor elles hadde I haue dwelled with Theseus  
 I fetered in his prison̄ eueremo  
 Thanne hadde I ben in blisse and not in woo  
 Only þe sight of hire whom þat I serue  
 þough þat I neuer hire grace may deserue  
-Wolde haue y suﬀised right ynough for me  
+Wolde haue y suffised right ynough for me  
 ¶ Oo deere Cosyn Palamon qd he  
 Thin is þe victorie of þis auenture  
-ﬀul blissefully in prison̄ might þou dure  
+fful blissefully in prison̄ might þou dure  
 In p̉soun certes nay but paradys  
 Wel haþ fortune torned þe þe dys  
 That hast þe right of hire and I þabsence  
-ﬀor possible is syn þou hast hir p̔sence  
+ffor possible is syn þou hast hir p̔sence  
 And art a knight a worþi and an able  
 That by som caas syn fortune is changeable  
 Thou maist somtyme to þi desir atteyne  
@@ -34,7 +34,7 @@ That þer nys erþe water fyr ne eyre
 Ne creature þat of hem maked is  
 That may me helpe or don confort in þis  
 Wel ought I sterue in wanhope and distresse  
-ﬀare wel my lif my lust and my gladnesse  
+ffare wel my lif my lust and my gladnesse  
 Allas why pleynen men so in comune  
 On purueance of god or of fortune  
 That ȝiueth hem ful ofte in many a gyse  
