--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -38,7 +38,7 @@ Assemble all þe folk of oure kinrede
 And make a werre so scharp on þis Cite  
 That by som auenture or som tretee  
 Thou maist haue hir to lady and to wif  
-ﬀor whom þat I most needes leese my lif  
-ﬀor as by weie of possibilite  
+ffor whom þat I most needes leese my lif  
+ffor as by weie of possibilite  
 Sitthe þou art at þi large of prison̄ fre  
 And art a lord gret is þin auantage  
