--- a/transcriptions/19r.md
+++ b/transcriptions/19r.md
@@ -7,7 +7,7 @@ date: June 2018
 - [ ] Double checked
 
 More þan is myn þat sterue her in a kage  
-ﬀor I mot weepe and wayle whil þat I lyue  
+ffor I mot weepe and wayle whil þat I lyue  
 With all þe woo þat prison̄ may me ȝiue  
 And eek with peyne þat loue me yueþ also  
 That doubleþ al my torment and my wo  
@@ -21,7 +21,7 @@ And writen in þe table of athamaunt
 youre ꝑlement and ȝour eterne gǖnt  
 What is mankynde more vnto ȝou holde  
 Than is þe scheep þat roukeþ in þe folde  
-ﬀor slain is man right as anoþer beeste  
+ffor slain is man right as anoþer beeste  
 And dwelleþ eek in p̉son̄ and in arreste  
 And haþ siknesse and gret aduersite  
 And ofte tymes gilteles ꝑ de  
@@ -29,7 +29,7 @@ And ofte tymes gilteles ꝑ de
 That gilteles tormenteþ Innocence  
 And encreseth þis is al my penaūce  
 That man is bounden to his obẜuaūce  
-ﬀor goddes sake to letten of his wille  
+ffor goddes sake to letten of his wille  
 Ther as a beeste may all his lust fulfill  
 And whan a beeste is ded he haþ no peyne  
 But after his deth þe man mot weepe ⁊ pleyne  
