--- a/transcriptions/19v.md
+++ b/transcriptions/19v.md
@@ -9,7 +9,7 @@ date: June 2018
 That haþ destroyed wel neyh al þe blood  
 Of Thebes with his waste walles wide  
 And venus sleeþ me on þat oþer syde  
-ﬀor Ialousye and fere of him Arcite  
+ffor Ialousye and fere of him Arcite  
 ¶ Now will I stynte of Palamon alite  
 And lat him in his prison̄ stille dwelle  
 And of Arcite forþ I wil ȝou telle  
@@ -17,11 +17,11 @@ The somer passeþ and þe nightes longe
 Encresceth double wise þe peynes stronge   
 Boþe of þe louer and of þe prisoner   
 I not which haþ þe wofuller myster   
-ﬀor schortly for to sein of Palamon  
+ffor schortly for to sein of Palamon  
 Ꝑpetuelly is dampned to prison  
 In cheynes and in fettres to þe ded  
 And arcite is exiled vp his hed  
-ﬀor euermore as out of þat contre  
+ffor euermore as out of þat contre  
 Ne neuer he ne schal his lady se  
 ¶ yow louers aske I now þis question̄  
 Who haþ þe wors arcite or Palamon  
@@ -30,10 +30,10 @@ But in prison̄ moot he duellen ay
 That oþer wher him list may ride or go  
 But seen his lady schal he neuer mo  
 Now diuineth as ȝou list þat ȝe can  
-ﬀor I wol telle forth as I bigan  
+ffor I wol telle forth as I bigan  
 Whan that arcite to Thebes comen was  
-ﬀul ofte a day he swelte and saide allas  
-ﬀor seen his lady schal he neuere more  
+fful ofte a day he swelte and saide allas  
+ffor seen his lady schal he neuere more  
 And schortly to concluden al his wo  
 So mochel sorwe hadde neuer creature  
 That is or schal whil þat þe world may dure  
