--- a/transcriptions/20v.md
+++ b/transcriptions/20v.md
@@ -22,12 +22,12 @@ And to þe contre he wente vpon a day
 And atte gate he profred his seruise  
 To drugge and drawe what so men wol deuise  
 And schortly of þis matier for to sein  
-He fille in oﬀice with a chamburlein  
+He fille in office with a chamburlein  
 The which þat was dwellyng with Emelye  
-ﬀor he was wys and sone couþe aspye  
+ffor he was wys and sone couþe aspye  
 Of eủy ẜuant which þat serueþ here  
 Wel couþe he hewen woode and water bere  
-ﬀor he was yong and mighty for þe nones  
+ffor he was yong and mighty for þe nones  
 And þerto he was strong and bigge of bones  
 To doon þat eny wight him can deuyse  
 A yeer or tuo he was in þis seruise  
