--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -13,7 +13,7 @@ The night was schort and faste by þe day
 That needes cost he most himseluen hyde  
 And til a groue faste þer bisyde  
 With dredful foot þan stalkeþ Palamon  
-ﬀor schortly þis was his opinion  
+ffor schortly þis was his opinion  
 That in þat groue he wolde him hide alday  
 And in þe night þan woled he take his way  
 To Thebes ward his frendes for to pray  
