--- a/transcriptions/22r.md
+++ b/transcriptions/22r.md
@@ -15,16 +15,16 @@ In to þe groue ful hastily he sterte
 And in a path he rometh vp and doun  
 Ther as by auentur̉ of þis Palamon  
 Was in a busshe þat no man might him see  
-ﬀor sore aferd if his deth was he  
+ffor sore aferd if his deth was he  
 No þing ne knewe he þat it was arcite  
 God wot he wolde haue trowed it ful lite  
 But soþ is seide go siþþen many ȝeeres  
 That feeld haþ yhen and þe woode haþ ceres  
 It is ful fair a man to bere him euene  
-ﬀor alday meeteþ men at vnsett steuene  
-ﬀul litel woot arcite of his felawe  
+ffor alday meeteþ men at vnsett steuene  
+fful litel woot arcite of his felawe  
 That was so neigh to herken of his sawe  
-ﬀor in þe busshe he sitteþ now ful stille  
+ffor in þe busshe he sitteþ now ful stille  
 Whan þat arcite hadde Romed al his fille  
 And songen al þe Roundel lustily  
 In to a studie he fel sodeinly  
