--- a/transcriptions/23r.md
+++ b/transcriptions/23r.md
@@ -7,7 +7,7 @@ author: G. E. Saretto
 - [x] Transcribed
 - [ ] Double checked
 
-ﬀor whom þat I haue al þis peyne and wo  
+ffor whom þat I haue al þis peyne and wo  
 And art my blood and to my counseil sworn  
 As I ful ofte haue told þe heer biforn  
 And hast be iaped here duk Theseus  
@@ -15,7 +15,7 @@ And falsly chaunged hast þi name þus
 I wol be ded or elles þou schalt dye  
 Thou schalt not loue my lady Emelye  
 But I wol loue hire oonly and nomo  
-ﬀor I am Palamon þi mortel foo  
+ffor I am Palamon þi mortel foo  
 And þough þat I no wepene haue in þis place  
 But out of p̉soun am astert by grace  
 I drede nought þat ouþer þou schalt die  
@@ -29,7 +29,7 @@ Nere it were þat þou art sike and wood for loue
 And eek þat þou no wepne hast in þis place  
 Thou schuldest neuer out of þis groue pace  
 That þou ne schuldest deyen of myn honde  
-ﬀor I diﬀie þe sewrte and þe bonde  
+ffor I diffie þe sewrte and þe bonde  
 Which þat þou seist I haue maad to þe  
 What verray fool þink weel þat loue is fre  
 And I wol loue hir maugre al þi might  
