--- a/transcriptions/23v.md
+++ b/transcriptions/23v.md
@@ -14,12 +14,12 @@ A þus þei ben departed til a morwe
 Whan ech of hem hadde leyd his feiþ to borwe  
 Occupied out of alle charite  
 O regne þat wolde no felawe haue with þe  
-ﬀul soþ is seid þat loue ne lorschipe  
+fful soþ is seid þat loue ne lorschipe  
 Wol not his þankes haue no felaschipe  
 We fynde þat of arcite and Palamon  
 Arcite is riden anon in to þe toun  
 And so þe morwe er it were dayes light  
-ﬀul priuely tuo herneys haþ he dight  
+fful priuely tuo herneys haþ he dight  
 Boþe sufficant and meete to darreyne  
 The batail in þe feld bitwix hem tweyne  
 And on his hors allone as he was borne  
@@ -34,7 +34,7 @@ And heereþ him come russhing in þe greeues
 And bereþ boþe bowes and þe leeues  
 And þinkeþ here comeþ my mortel enemy  
 Wiþoute faile he moot be deed or I  
-ﬀor eiþer I mot sleen him atte gappe  
+ffor eiþer I mot sleen him atte gappe  
 Or he mot slee me if þat me mys happe  
 So ferden þei in chaungyng of here hewe  
 As fer as euerich of hem oþer knewe
