--- a/transcriptions/24v.md
+++ b/transcriptions/24v.md
@@ -8,7 +8,7 @@ author: Jenna Schoen
 
 Duk Theseus þe streighte wey haþ holde  
 And to þe lannde he rideþ him ful righte  
-ﬀor þider was þe hert wont to haue his flighte  
+ffor þider was þe hert wont to haue his flighte  
 And ouer a brook and so forþ on his wey  
 This Duk wol haue a course at him or twey  
 Wiþ houndes swich as þat him list comaūde  
