--- a/transcriptions/25v.md
+++ b/transcriptions/25v.md
@@ -33,7 +33,7 @@ And spak þis same wordes al on hight
 How mighty and how gret a lord is he  
 Aȝeins his might þer gayneþ non obstacles  
 He may be cleped a god of his miracles  
-ﬀor he can maken at his owne gise  
+ffor he can maken at his owne gise  
 Of euerich herte as þat him list deuise  
 lo her þis arcite and þis Palamon  
 That quytly were out of my p̉son  
