--- a/transcriptions/26r.md
+++ b/transcriptions/26r.md
@@ -23,7 +23,7 @@ By god þan woot a Cockow of an hare
 But al moot ben assayed hoot and colde  
 A man moot ben a fool or ȝong or olde  
 I wot it by my self ful yore agon  
-ﬀor in my tyme a seruant was I on  
+ffor in my tyme a seruant was I on  
 And þerfore syn I knowe of loues peyne  
 And woot how sore it can a man distreyne  
 As he þat hath ben caught often in his laas  
