--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -6,7 +6,7 @@ author: Jenna Schoen
 - [X] Transcribed
 - [ ] Double checked
 
-ﬀor whom ȝe haue þis strif and Ialousie  
+ffor whom ȝe haue þis strif and Ialousie  
 Ȝe wite ȝoure self sche may not wedde tuo  
 At oones þough ȝe fighten eủemo  
 That oon of ȝou al be him loþ or leef  
@@ -21,7 +21,7 @@ Lo heer ȝour ende of þat I schal deuyse
 Wiþouten eny replicacion̄  
 If þat ȝow likeþ takeþ it for þe beste  
 That eủych of ȝou schal gon wher him leste  
-ﬀrely wiþouten Raunceon or daunger  
+ffrely wiþouten Raunceon or daunger  
 And þis day fifty wykes fer ne neer  
 Euerich of ȝou schal bringe an hundred knightes  
 Armed for þe lystes vp al rightes  
