--- a/transcriptions/27r.md
+++ b/transcriptions/27r.md
@@ -27,14 +27,14 @@ I dar wel seyn in þe world þer nas
 The|circuite a Mile was aboute  
 Walled of stoon and diched al wiþoute  
 Round was þe schap in maner of compas  
-ﬀul of degrees þe heighte of sixty paas  
+fful of degrees þe heighte of sixty paas  
 Than whan a man was sette on oo degre  
 he lettede nought his felawe for to see  
 Estward þer stood a gate of marbel white  
 Westward right south anoþer in opposite  
 And schortly to conclude such a place  
 Was non in erþe as in so litel a space  
-ﬀor in þe lond þer nas no crafty man  
+ffor in þe lond þer nas no crafty man  
 That Geometrie or ars metrike can  
 Ne purtreiour ne keruer of ymages  
 That Theseus ne gain him mete ⁊ wages  
