--- a/transcriptions/27v.md
+++ b/transcriptions/27v.md
@@ -29,12 +29,12 @@ Charmes and force lesynges flaterie
 Dispense bysynesse and Ialousie  
 That werede of yalow of gooldes a garlond  
 And a cukkow sittyng on his hond  
-ﬀestes instrumentz karoles daunces  
+ffestes instrumentz karoles daunces  
 lust and array and all þe circumstances  
 Of loue which þat rekned and rekene schal  
 By ordre were peynted on þe wal  
 And mo þan I can make of mencion̄  
-ﬀor sothly al þe mont of Citheron̄  
+ffor sothly al þe mont of Citheron̄  
 Ther venus haþ hir principal dwellyng  
 Was schewed on þe wal in portreying  
 Wiþ al þe gardyn and þe lustynesse  
