--- a/transcriptions/28r.md
+++ b/transcriptions/28r.md
@@ -15,10 +15,10 @@ The riche Crysus kaytif in seruage
 Thus may ȝe seen þat Wisdom ne richesse  
 Beaute ne sleighte strengþe ne hardynesse  
 Ne may wiþ venus holde chamꝑtye  
-ﬀor as hire list þe world þanne may sche gye  
+ffor as hire list þe world þanne may sche gye  
 lo all þise folk so kaught were in here lace  
 Til þei for woo ful ofte seyde allase  
-Suﬀiseth here ensamples oon or tuo  
+Suffiseth here ensamples oon or tuo  
 And þough I couþe rekne a þousand mo  
 The statue of venus glorious for to see  
 Was inaked fleetyng in þe large see  
@@ -40,6 +40,6 @@ lik to þe eestres of þe grisly place
 That highte þe grete temple of Mars in trace  
 In þilke colde frosty regioun  
 Ther as Mars haþ his soủaigne mansion̄  
-ﬀirst on þe wal was peynted a foreste  
+ffirst on þe wal was peynted a foreste  
 In which þer dwelled neyþer man ne beste  
 Wiþ knotty knarry bareyne trees olde  
