--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -16,7 +16,7 @@ Was long and streyt and gastly for to see
 And þer out cam a rage and such a vese  
 That it made all þe gates for to rese  
 The northerne light in atte dores schone  
-ﬀor wyndowe on þe wall ne was þer none  
+ffor wyndowe on þe wall ne was þer none  
 Thorugh which men mighte eny light discerne  
 The dores waren all of Atthemant et̔ne  
 ychenchede ouertwart and endlong  
