--- a/transcriptions/30r.md
+++ b/transcriptions/30r.md
@@ -27,11 +27,11 @@ That neuer siþþen þat þe world bigan
 That for to speke of knighthode of here hond  
 As ferre as god haþ maked see or lond  
 Nas of so fewe so noble a companye  
-ﬀor euery wight þat loued chiualrie  
+ffor euery wight þat loued chiualrie  
 And wolde his þankes haue a passant name  
 Haþ preyed þat he mighte ben of þat game  
 A wel was him þat þer to chosen was  
-ﬀor if þer fille to morwe such a caas  
+ffor if þer fille to morwe such a caas  
 ȝe knowe wel þat euery lusty knight  
 That loueþ ꝑamours and haþ his might  
 Were it in Ingelond or elles where  
