--- a/transcriptions/30v.md
+++ b/transcriptions/30v.md
@@ -22,7 +22,7 @@ With kempe heres on his browes stoute
 his lymes grete his braunes harde and strong  
 his schuldernes brode his armes round and long  
 And as þe gyse was in his cuntre  
-ﬀul heighe vpon a chaar of gold stood he  
+fful heighe vpon a chaar of gold stood he  
 Wiþ foure white boles in þe trays  
 In stede of cote armour ouer his harnays  
 Wiþ nayles yelowe and bright as eny golde  
