--- a/transcriptions/31r.md
+++ b/transcriptions/31r.md
@@ -30,12 +30,12 @@ vpon his hand he bar for his deduyt
 An Egle tame as eny lilie whit  
 And C. lordes hadde he with him þere  
 All armed saue here heedes in al here gere  
-ﬀul richely in all maner þinges  
-ﬀor trusteþ wel þat Dukes Erles kynges  
+fful richely in all maner þinges  
+ffor trusteþ wel þat Dukes Erles kynges  
 Were gadred in þis noble companye  
-ﬀor loue and for encrees of chiualrie  
+ffor loue and for encrees of chiualrie  
 aboute þis king þer ran on eủry part  
-ﬀul many a tame leon̄ and lepart  
+fful many a tame leon̄ and lepart  
 And in þis wise þise lordes all and some  
 Ben on þe soneday to þe Cite come  
 Aboute p̉me and in þe toun alighte  
