--- a/transcriptions/31v.md
+++ b/transcriptions/31v.md
@@ -33,10 +33,10 @@ And in here houre he walkeþ forþ a paas
 vnto þe lystes þer hire temple was  
 And doun he kneleþ and wiþ humble chere  
 and herte sore he seyde as ȝe schal heere  
-¶ ﬀairest of faire O lady myn Venus  
+¶ ffairest of faire O lady myn Venus  
 Doughter to Ioue and spouse to Vulncanus  
 Though glader of þe moūt of Citheron̄  
-ﬀor þilke loue þou haddest to adon̄  
+ffor þilke loue þou haddest to adon̄  
 haue pite of my bittre teeres smerte  
 and tak myn humble preier at þin herte  
 Allas I ne haue no langage to telle  
