--- a/transcriptions/32r.md
+++ b/transcriptions/32r.md
@@ -21,11 +21,11 @@ Ne renon̄ in þis caas ne veine glorie
 Of pris of armes blowen vp and doun  
 But I wolde haue fully possessioun  
 Of emelye and dye in þi ẜuise  
-ﬀynde yow þe maner how and in what wise  
+ffynde yow þe maner how and in what wise  
 I recche nat but it may bettre be  
 To haue victorie of hem or þei of me  
 So þat I may haue my lady in mȳ armes  
-ﬀor þough so be þat mars is god of armes  
+ffor þough so be þat mars is god of armes  
 youre vertue is so gret in heuen aboue  
 That if yow list I schal wel haue my loue  
 Thy temple wil I worschipe euermo  
@@ -40,6 +40,6 @@ This is þeffect and ende of my preyere
 yif me my loue þou blisful lady deere  
 whan þe orison̄ was don of Palamon  
 his sacrifise he dide and þat anon  
-ﬀul pitously wiþ all circumstances  
+fful pitously wiþ all circumstances  
 All telle I not as now his obẜuances  
 But atte laste þe Statue of Venus schook  
