--- a/transcriptions/32v.md
+++ b/transcriptions/32v.md
@@ -8,7 +8,7 @@ author: Jenna Schoen
 
 And made a signe wherby þat he took  
 That his prayer accepted was þat day  
-ﬀor þough þe signe schewed a delay  
+ffor þough þe signe schewed a delay  
 Ȝit wist he weel þat gǖnted was his boone  
 And with glad herte he went him home ful soone  
 The þridde hour inequal þat Palamon  
@@ -16,7 +16,7 @@ Bigan to venus temple for to gon
 vp roos þe soune and vp roos Emelye  
 And to þe temple of Diane gan hye  
 hir maydenes þat þider with hir ladde  
-ﬀul redily with hem þe fyr þey hadde  
+fful redily with hem þe fyr þey hadde  
 Thencens þe cloþes and þ remenant all  
 That to þe sacrifice longen schall  
 The hornes full of methe as was þe gise  
@@ -41,4 +41,4 @@ O chaste goddesse of þe woodes greene
 To whom boþe heuen and erþe and see is seene  
 Queen of þe regne of Pluto dirk and lowe  
 Goddesse of maydenes þat myn herte hast knowe  
-ﬀul many a yeer and wost what I desire  
+fful many a yeer and wost what I desire  
