--- a/transcriptions/33r.md
+++ b/transcriptions/33r.md
@@ -18,7 +18,7 @@ And for to walken in the woodes wilde
 And nought to ben a wijf and be wiþ childe  
 Nought wol I knowe compaignie of man  
 Now helpe me lady siþþe ȝe may and can  
-ﬀor þe þre formes þat þou hast in the  
+ffor þe þre formes þat þou hast in the  
 And Palamon þat haþ swich loue to me  
 And eek arcite þat loueþ me so sore  
 This grace I preye ȝow wiþoute more  
@@ -39,7 +39,7 @@ And whil I lyue a maide I wol ȝou serue
 ¶ The fires brennen vpo þe auter cleer  
 Whil Emelye was þus in hire preyer  
 But sodeinly sche saugh a sighte queynte  
-ﬀor right anon on of þe fyres queynte  
+ffor right anon on of þe fyres queynte  
 And quiked agayn and after þat anon  
 That oþer fyr was queint and al a gon  
 And as it queinte it made a whistlinge  
