--- a/transcriptions/34r.md
+++ b/transcriptions/34r.md
@@ -16,7 +16,7 @@ If so be þat my youthe may deserue
 And þat I mighte be worthy for to serue  
 Thy godhede þat I may ben oon of þine  
 Than pray I þe to rewe vpon my pyne  
-ﬀor þilke pyne and þilke hoote fyre  
+ffor þilke pyne and þilke hoote fyre  
 In which þou whilom brendest for desire  
 Whan þat þou vsedest þi beaute  
 Of faire ȝonge freissche Venus free  
@@ -24,19 +24,19 @@ And haddest hire in armes at þi wille
 Al þough þe oones on a tyme mysfille  
 Whan Walcanus hadde caught þe in his laas  
 And fond þe ligging by his wijf allas  
-ﬀor þilke sorwe þat was in þin herte  
+ffor þilke sorwe þat was in þin herte  
 Haue rouþe as wel vpon my peynes smerte  
 I am yong and vnconnyng as þou wost  
 And as I trowe with loue offended moost  
 That euer was ony lyues creature  
-ﬀor sche þat doth me all þis woo endure  
+ffor sche þat doth me all þis woo endure  
 Ne reccheþ neuer wher I synke or fleete  
 And wel I woot ar sche me mercy heete  
 I moot wiþ strengþe wynne hire in þe place  
 And wel I woot wiþoute helpe or grace  
 Of þe ne may my strengþe nought auaile  
 Than helpe me lord to morwe in my bataille  
-ﬀor þilke fyr þat whilom brente þe  
+ffor þilke fyr þat whilom brente þe  
 As wel as þilke fir now brenneþ me  
 And do þat I to morwe haue victorie  
 Myn be þe trauaile and þin be þi glorie  
