--- a/transcriptions/34v.md
+++ b/transcriptions/34v.md
@@ -29,16 +29,16 @@ And more encense in to þe fir he caste
 With oþre rites moo and atte laste  
 The statut of mars bigan his hauberk rynge  
 And with þe soun he herd a mormoringe  
-ﬀul lowe ⁊ dym þat seyde þis victorie  
-ﬀor which he ȝaf to mars honour and glorie  
+fful lowe ⁊ dym þat seyde þis victorie  
+ffor which he ȝaf to mars honour and glorie  
 And þus with ioye and hope wel to fare  
 Arcite anon vnto his Inne is fare  
 As fayn as foul is of þe brighte sonne  
 And right anon such strif is bygonne  
-ﬀor þilke grauntyng in þe heuen aboue  
+ffor þilke grauntyng in þe heuen aboue  
 Bitwixe venus þe goddesse of loue  
 And Mars þe sterne god armipotent  
 That Iubiter was besy it to stent  
 Til þat þe pale Saturnus þe colde  
 That knew so many of auentures olde  
-ﬀond in his olde exꝑience an arte  
+ffond in his olde exꝑience an arte  
