--- a/transcriptions/35v.md
+++ b/transcriptions/35v.md
@@ -6,7 +6,7 @@ author: Jenna Schoen
 - [x] Transcribed
 - [ ] Double checked
 
-The grete eﬀect for which þat I bygan  
+The grete effect for which þat I bygan  
 Gret was þe feste in Athenes þat day  
 And eek þat lusty sesoun of þat may  
 Made euery knight to ben in such plesance  
