--- a/transcriptions/17r.md
+++ b/transcriptions/17r.md
@@ -11,12 +11,12 @@ Or elles art þou fals I dar wel sayn
 This Arcite ful proudly spak agayn  
 Thou schalt quod he be raþer fals þan I  
 But þou art fals I telle þe witterly  
-¶ﬀor ꝑamour I loued hir first er þou  
+¶ffor ꝑamour I loued hir first er þou  
 What wilt þou seyn þou wist it nought yit now  
 Wheþur sche be a wōman or goddesse  
 Thin is affectiōn̄ of holynesse  
 And myn is loue as to a creature  
-ﬀor which I tolde þe myn auenture  
+ffor which I tolde þe myn auenture  
 As to my cosyn and to my broþer sworn  
 I pose þat þou louedest hire biforn  
 Wostow nought wel þe olde clerkes sawe  
@@ -30,7 +30,7 @@ He may not fleen hit þough he scholde be dede
 Al be sche mayde or wydow or elles wif  
 And eek it is not likly al þi lif  
 To stonden in hir grace namore schal I  
-ﬀor wel þou wost þi selue verreily  
+ffor wel þou wost þi selue verreily  
 That þou and I ben dampned to prisoōn̄  
 Ꝑpetuelly vs gaigneth no Ramsōn̄  
 We stryuen now as houndes for þe bon  
