--- a/transcriptions/21r.md
+++ b/transcriptions/21r.md
@@ -11,7 +11,7 @@ That Theseus haþ taken him so neere
 That of his Chambre he made him a squiere  
 And gaf him golde to mayntene his degre  
 And eek men brought him out of his contre  
-ﬀro ȝeer to ȝeer ful priuily his rente  
+ffro ȝeer to ȝeer ful priuily his rente  
 But honestly and sleighly he it spente  
 That no man wondred how þat he it hadde  
 And þre ȝeer in þis wise his lif he ladde  
@@ -21,7 +21,7 @@ And in þis blisse lete I now arcite
 And speke I wol of Palamon alite  
 ¶ In derknesse and horrible and strong p̉son̄  
 This seuene ȝeer haþ seten Palamon̄  
-ﬀorpyned what for woo and for distresse  
+fforpyned what for woo and for distresse  
 Who feleth double sore and heuynesse  
 But Palamon þat loue drencheþ so  
 That wood out of his wit he goþ for wo  
@@ -38,7 +38,7 @@ As whan a þing is schape it schal be
 That sone after þe mydnyght Palamon  
 By helpyng of a frende brak prison̄  
 And fleþ þe cite faste as he may goo  
-ﬀor hadde yeue his gailler drinke soo  
+ffor hadde yeue his gailler drinke soo  
 Of a clarre maad of a certeyn wyn  
 With nercotiks and opie of Thebes fyn  
 That al þat night þough þat men wolde him schake  
