--- a/transcriptions/22v.md
+++ b/transcriptions/22v.md
@@ -17,7 +17,7 @@ And now I am so caytif and so prall
 That he þat is my mortel enemy  
 I serue him as his squier pouerly  
 And ȝit doþ me Iuno wel more schame  
-ﬀor I dar nought biknowe myn owene name  
+ffor I dar nought biknowe myn owene name  
 but þer as I was wont to hight arcite  
 Now highte I Philostrate nought worþ a myte  
 Allas þou felle mars allas þou Juno  
@@ -37,7 +37,7 @@ And with þat word he fel doun in a traunce
 A long tyme and aftirward he vpsterte  
 This Palamon þat þought þat þorugh his herte   
 He felte a cold swerd sodeinliche glyde  
-ﬀor yre he quok no lenger wolde he byde  
+ffor yre he quok no lenger wolde he byde  
 And whan þat he had herd Arcites tale  
 As he were wood with face deed and pale  
 he sterte him vp out of þe buskes þikke  
