--- a/transcriptions/24r.md
+++ b/transcriptions/24r.md
@@ -23,7 +23,7 @@ So strong it is þat þei þe world hadde it swore
 The contraire of a þing be ȝe or nay
 ȝet som tyme it schal falle on a day  
 þat falleþ nought eft wiþinne a þousend ȝere  
-ﬀor certeinly oure appetites heere  
+ffor certeinly oure appetites heere  
 Be it of werre or pees or hate or loue  
 Al is þis reuled by þe fight aboue  
 This mene I now by mighty Theseus  
@@ -32,10 +32,10 @@ And namly atte grete hert in may
 That in his bedde þer daweþ him no day  
 That he nys cladde and redy for to ride  
 Wiþ hunte and horn and houndes hym besyde  
-ﬀor in his huntyng haþ he such delit  
+ffor in his huntyng haþ he such delit  
 That it is all his ioye and appetyt  
 To ben himself þe grete hertes bane  
-ﬀor after mars he serueþ now Diane  
+ffor after mars he serueþ now Diane  
 Cler was þe day as I haue told er þis  
 And Theseus with alle ioye and blys  
 With his ypolita þe faire queene  
