--- a/transcriptions/25r.md
+++ b/transcriptions/25r.md
@@ -7,13 +7,13 @@ author: G. E. Saretto
 - [x] Transcribed
 - [ ] Double checked
 
-ﬀor which he haþ deserued to be ded  
-ﬀor þis is he þat com vnto þi gate  
+ffor which he haþ deserued to be ded  
+ffor þis is he þat com vnto þi gate  
 And seyde þat he highte Philostrate  
 Thus haþ he Iaped þe ful many a ȝeere  
 And þou hast maked him þi cheef squiere  
 And þis is he þat loueþ Emelye  
-ﬀor siþ þat day is come þat I schal dye  
+ffor siþ þat day is come þat I schal dye  
 I make pleynly my confession̄  
 That I am þilke woful Palamon  
 þat haþ þi p̉son̄ broke wikkedely  
@@ -22,7 +22,7 @@ That loueþ so hote Emelya þe brighe
 That I wol dye p̔sent in hir sighte  
 Wher fore I axe deþ and my Iuwise  
 But sle my felawe in þe same wise  
-ﬀor boþe haue we deserued to be slayn  
+ffor boþe haue we deserued to be slayn  
 ¶ This worþi duk answerde anon agayn  
 And seide þis is a schort conclusioun  
 your owne mouþ be ȝoure confession̄  
@@ -34,7 +34,7 @@ Com for to wepe and so dide Emelye
 And all þe ladies of þe compaignye  
 Gret pite was it as it þought hem all
 That euer such a chaunce schulde falle  
-ﬀor gentil men þei were of gret estat  
+ffor gentil men þei were of gret estat  
 And noþing but for loue was þis debat  
 And saugh hire bloody woundes wide and sore  
 And all cryeden boþe lasse and more  
@@ -42,4 +42,4 @@ Haue mercy lord vpon vs wōmen all
 And on here bare knees doun þei fall  
 And wolde haue kist his feet þer as he stood  
 Til atte laste aslaked was his mood  
-ﬀor pite renneþ sone in gentil herte  
+ffor pite renneþ sone in gentil herte  
