--- a/transcriptions/29v.md
+++ b/transcriptions/29v.md
@@ -21,13 +21,13 @@ Ther saugh I dane torned til a tree
 I mene nat þe goddesse Diane  
 But Penneus doughter which þat hight Dane  
 ¶ Ther saugh I accheon an herte y maked  
-ﬀor vengance þat he saugh Diane al naked  
+ffor vengance þat he saugh Diane al naked  
 I saugh how þat his houndes haue him caught  
 and freten him for þat þei knewe him naught  
 yet ypeynted was a litel forþere more  
 how atthalance hounted þe wilde bore  
 And Meliagre and many anoþer mo  
-ﬀor which Diane wrought him care and wo  
+ffor which Diane wrought him care and wo  
 Ther saugh I many anoþer wonder storie  
 The which me list nat drawe to memorie  
 ¶ This goddess on an hert ful wel hiegh seet  
@@ -39,4 +39,4 @@ hir eyhen caste sche ful lowe a doun
 Ther Pluto haþ his derke regioun  
 A wōman trauaillynge was hire biforn  
 But for hire childe so longe was vnborn  
-ﬀul pitouly lucyna gan sche calle  
+fful pitouly lucyna gan sche calle  
