--- a/transcriptions/33v.md
+++ b/transcriptions/33v.md
@@ -9,9 +9,9 @@ author: Jenna Schoen
 As don þese wete brondes in here brennynge  
 And at þe brondes ende out ran anon  
 As it were bloody dropes many on  
-ﬀor which so sore a gast was Emelye  
+ffor which so sore a gast was Emelye  
 That sche was ful ny mad and gan to crie  
-ﬀor sch ne wiste what it signefied  
+ffor sch ne wiste what it signefied  
 But oonly for þe feer þus haþ sche cried  
 And weepe þat it was pite for to heere  
 And þer with al Diane gan appeere  
@@ -22,19 +22,19 @@ And by eterne word writen and confermed
 Thou schalt be wedded vnto oon of þo  
 þat han for þe so mochel care and wo  
 And vnto which of hem I may not telle  
-ﬀar wel for I ne may no lenger dwelle  
+ffar wel for I ne may no lenger dwelle  
 The fyres which þat on myn auter breme  
 Schul þe declare ar þat ȝe gon henne  
 Thin auenture of loue as in þis caas  
 And wiþ þat word þe arwes in þe caas  
 Of þe goddesse clateren faste and rynge  
 And forþ sche wente and made a vanysschynge  
-ﬀor which þis Emelye astoned was  
+ffor which þis Emelye astoned was  
 And seide what amonteþ þis allas  
 I putt me in þi ꝓteccion̄  
 Diane and in þi disposicion̄  
 And home sche goþ anon þe nexte weye  
-This is þeﬀecte þer nys namore to seye  
+This is þeffecte þer nys namore to seye  
 The nexte hour of mars folwynge þis  
 Arcite vnto te temple walked is  
 Of fiers mars to don his sacrifise  
