replaced u hook with u inv comma

--- a/transcriptions/20v.md
+++ b/transcriptions/20v.md
@@ -25,7 +25,7 @@ And schortly of þis matier for to sein
 He fille in office with a chamburlein  
 The which þat was dwellyng with Emelye  
 ffor he was wys and sone couþe aspye  
-Of eủy ẜuant which þat serueþ here  
+Of eu̔y ẜuant which þat serueþ here  
 Wel couþe he hewen woode and water bere  
 ffor he was yong and mighty for þe nones  
 And þerto he was strong and bigge of bones  
