--- a/transcriptions/26r.md
+++ b/transcriptions/26r.md
@@ -34,7 +34,7 @@ And ȝe schal boþe anon vnto me swere
 That neuere ȝe schal my coroune dere  
 Ne make werre vpon me night ne day  
 But ben my frendes in all þat ȝe may  
-I ȝou forȝiue þis trespas eủy del  
+I ȝou forȝiue þis trespas eu̔y del  
 And þey him sworen his axing fair and wel  
 And him of lordschipe and of mercy preide  
 And he hem g̃unteþ grace and þus he seide  
