--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -21,7 +21,7 @@ Thorugh which men mighte eny light discerne
 The dores waren all of Atthemant et̔ne  
 ychenchede ouertwart and endlong  
 Wiþ Iren towgh and for to make it strong  
-Eủy piler þe temple to sustene  
+Eu̔y piler þe temple to sustene  
 Was tonne gret of Iren bright and scheene  
 Ther say I ferst þe derk ymagynynge  
 Of felonye and al þe compassynge  
