--- a/transcriptions/31r.md
+++ b/transcriptions/31r.md
@@ -34,12 +34,12 @@ fful richely in all maner þinges
 ffor trusteþ wel þat Dukes Erles kynges  
 Were gadred in þis noble companye  
 ffor loue and for encrees of chiualrie  
-aboute þis king þer ran on eủry part  
+aboute þis king þer ran on eu̔ry part  
 fful many a tame leon̄ and lepart  
 And in þis wise þise lordes all and some  
 Ben on þe soneday to þe Cite come  
 Aboute p̉me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
 Whan he hadde brought hem in to his Cite  
-And Inned hem eủich at his degre  
+And Inned hem eu̔ich at his degre  
 He festeþ hem and doþ so gret labour  
