--- a/transcriptions/34v.md
+++ b/transcriptions/34v.md
@@ -8,7 +8,7 @@ author: Jenna Schoen
 
 And in þi temple I wil my baner honge  
 And all þe armes of my companye  
-And eủemo vnto til þat day I dye  
+And eu̔emo vnto til þat day I dye  
 Eterne fire I wol byfore þe fynde  
 And eek to þis avow I wil me bynde  
 My berd myn here þat hongreþ longe a doun  
