--- a/transcriptions/30r.md
+++ b/transcriptions/30r.md
@@ -20,7 +20,7 @@ The day approcheþ and hir retornynge
 That eueriche scholde an hundred knightes bringe  
 The bataille to darrayne as I ȝou tolde  
 And til athenes hire couenant for to holde  
-Haþ eủych of hem brought an .C. knightes  
+Haþ eu̔ych of hem brought an .C. knightes  
 Wel armed for þe werre at all rightes  
 And sikerly þer trowed many a man  
 That neuer siþþen þat þe world bigan  
