removed o macron from on

--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -15,8 +15,8 @@ Why crydestow who haþ þe don offence
 ffor goddes love tak al in pacience  
 Oure p̉soun for it may non oþer be  
 ffortune haþ yiue us þis aduersite  
-Som wicke aspect or disposiciōn̄  
-Of Saturne by som constellaciōn̄  
+Som wicke aspect or disposicion̄  
+Of Saturne by som constellacion̄  
 Haþ ȝiuen vs þis al þough we had it sworn  
 So stood þe heuen whan þat we ware born  
 We mote endure it þis is schort and playn  
