--- a/transcriptions/17r.md
+++ b/transcriptions/17r.md
@@ -14,7 +14,7 @@ But þou art fals I telle þe witterly
 ¶ffor ꝑamour I loued hir first er þou  
 What wilt þou seyn þou wist it nought yit now  
 Wheþur sche be a wōman or goddesse  
-Thin is affectiōn̄ of holynesse  
+Thin is affection̄ of holynesse  
 And myn is loue as to a creature  
 ffor which I tolde þe myn auenture  
 As to my cosyn and to my broþer sworn  
@@ -31,8 +31,8 @@ Al be sche mayde or wydow or elles wif
 And eek it is not likly al þi lif  
 To stonden in hir grace namore schal I  
 ffor wel þou wost þi selue verreily  
-That þou and I ben dampned to prisoōn̄  
-Ꝑpetuelly vs gaigneth no Ramsōn̄  
+That þou and I ben dampned to prisoon̄  
+Ꝑpetuelly vs gaigneth no Ramson̄  
 We stryuen now as houndes for þe bon  
 They fought alday and ȝet here part was non  
 Ther com a kyte whil þat þei were so wroþe  
@@ -41,4 +41,4 @@ Ak þerfore atte kinges court my broþer
 Ech man for him self þer is non oþer  
 loue if þou list for I loue and ay schal  
 A soothly leue broþer þis is al  
-her in þis prisōn̄ mote we endure  
+her in þis prison̄ mote we endure  
