--- a/transcriptions/17v.md
+++ b/transcriptions/17v.md
@@ -25,8 +25,8 @@ But of þat story list me nought to write
 Duk Ꝑotheus louede wel arcite  
 And had him knowe at Thebes þer be yere  
 And finally at request and preyere  
-Of Ꝑotheus wiþoute ony Raunsōn̄  
-Duk Theseus him leet out of prisōn̄  
+Of Ꝑotheus wiþoute ony Raunson̄  
+Duk Theseus him leet out of prison̄  
 ffrely to gon wher þat him list ouer al  
 In such a gise as I ȝou telle schal  
 This was þe forware pleinly for tendite  
