--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -4,30 +4,30 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 And þer with al he bleynt and cryed a  
-As þough he stongen were unto þe herte  
-And with þat crye Arcite anon up sterte  
+As þough he stongen were vnto þe herte  
+And with þat crye Arcite anon vp sterte  
 And seide Cosyn myn what eyleþ þe  
 That art so pale and dedly on to se  
-Why crydestow who haþ þe don offence  
-ffor goddes love tak al in pacience  
+why crydestow who haþ þe don offence  
+ffor goddes loue tak al in pacience  
 Oure p̉soun for it may non oþer be  
-ffortune haþ yiue us þis aduersite  
+ffortune haþ yiue vs þis aduersite  
 Som wicke aspect or disposicion̄  
 Of Saturne by som constellacion̄  
-Haþ ȝiuen vs þis al þough we had it sworn  
+haþ ȝiuen vs þis al þough we had it sworn  
 So stood þe heuen whan þat we ware born  
-We mote endure it þis is schort and playn  
+we mote endure it þis is schort and playn  
 This Palamon answerd and seide again  
-Cosyn for soþe of þis opynion  
-Þou hast a vain imaginacion  
+Cosyn for soþe of þis opynion̄  
+þou hast a vain Imaginacion̄  
 This p̉son̄ causede me nought to crie    
 But I was hurt right now þorugh out myn yhe    
 In to myn hert þat wol my bane be  
 The fayrnesse of þat lady þat I see  
-Ȝonde in the gardyn rome to and fro  
+ȝonde in the gardyn rome to and fro  
 Is cause of al my crying and my wo  
 I not wher sche be wōman or goddesse  
 But Venus is it sothly as I gesse  
@@ -41,4 +41,4 @@ By eterne world to deyen in p̉son̄
 Of oure lynage haue som compassion̄  
 That is so lowe y brought by tyrannie  
 And with þat word Arcite gan aspye  
-Wher as þis lady romed to and fro  
+wher as þis lady romed to and fro  
